k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: app-service
          image: gyumcho/app-service:latest
          ports:
            - containerPort: 8080
        - name: app-frontend
          image: gyumcho/app-frontend:latest
          ports:
            - containerPort: 3000

        - name: model-service
          image: gyumcho/model-service:latest
          ports:
            - containerPort: 5010
